2002-10-04  Andras Varga

	* error handling with exceptions has been refined.

2002-09-07 Andras Varga

	* added cchannel.cc, modified carray.cc, cgate.cc, cmessage.cc, 
	cmodule.cc, csimul.cc, mpimod.cc, mpipack.cc, netpack.cc, pvmmod.cc,
        pvmpack.cc: introduced channel objects -- see include/ChangeLog for
        more details

2002-07-08  Andras Varga

	* coutvect.cc (cOutVector methods): register vector as early as 
	possible. This is needed by the Akaroa output vector manager because
	Akaroa needs to know the total number of parameters before recording 
	the first value. (This change has the side effect that empty vectors
	also get declared in the output vector file, which is redundant.)

2002-07-04  Andras Varga

	* cdispstr.h added: utility class cDisplayString

2002-07-03  Andras Varga

	* csimul.cc (doOneEvent()): bugfix: added missing ev.messageDelivered()
	call that could cause a "phantom" message being animated in Tkenv with
        handleMessage()-based simple modules

2002-06-27  Andras Varga

	* cexception.cc/h added; most opp_error() calls replaced with 
	throw new cException(...). Exceptions are caught in 
	cSimpleModule::activate() (for activity()-based modules) and
	in cSimulation::doOneEvent() (for handleMessage()-based modules),
	and converted to 'conventional' opp_error(). 

	* TBD: rethink error handling wrt exceptions!

2002-06-24  Andras Varga

	* ccoroutine.h/cc: use Fiber API on Windows

2002-06-17  Andras Varga

	* cpar.cc: new feature: cPar can use compiled expressions subclassed 
	from cDoubleExpression (new class). This is needed for code generated
	by the new, nedxml-based nedc. 

2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>

	* cdensity.cc, chist.cc, cksplit.cc, cmodule.cc, cobject.cc,
	cpar.cc, cpsquare.cc, csimul.cc, cstat.cc, ctypes.cc, cvarhist.cc:
	do not include iostream.h et.al. directly (already included by
	header files)
	
	* cmessage.cc (decapsulate): added check for encapmsg==0 before